--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsx simple-server.ts",
-    "start:dev": "tsx watch simple-server.ts"
+    "dev": "tsnd --respawn --transpile-only src/server.ts",
+    "simple:start": "tsnd simple-server.ts",
+    "simple:dev": "tsnd watch simple-server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "apollo-server": "^3.12.0",
-    "graphql": "^16.6.0"
+    "class-validator": "^0.14.0",
+    "graphql": "^15.8.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^2.0.0",
+    "type-graphql": "^1.1.1"
   }
 }
